--- a/frontend/src/app/components/todos/todos.component.html
+++ b/frontend/src/app/components/todos/todos.component.html
@@ -9,7 +9,7 @@
         />
         <input type="submit" value="Add Todo" class="todo-submit" />
     </form>
-    <div *ngFor="let todo of todos" class="todo {{ todo.completed ? 'done' : '' }}">
+    <div *ngFor="let todo of todos" class="todo" [ngClass]="{ 'done': todo.completed }">
         <div class="id">{{ todo.id }}</div>
         <div class="content" (click)="toggleDone(todo.id)" >{{ todo.content }}</div>
         <button class="delete" (click)="deleteTodo(todo.id)">Remove</button>
