--- a/frontend/src/app/components/todos/todos.component.html
+++ b/frontend/src/app/components/todos/todos.component.html
@@ -2,7 +2,7 @@
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col">
-                <div class="card" style="border-radius: .75rem; background-color: bisque;">
+                <div class="card bg-light" style="border-radius: .75rem;">
                     <div class="card-body py-4 px-4 px-md-5">
 
                         <p class="h1 text-center mt-3 mb-4 pb-3">To-Do List</p>
@@ -11,29 +11,34 @@
                             <div class="card">
                                 <div class="card-body">
                                     <div class="d-flex flex-row justify-content-center">
-                                        
+
                                         <form #form="ngForm" (ngSubmit)="onFormSubmit(form)">
-                                            <input type="text" placeholder="Enter todo..." class="form-control form-control-lg" ngModel
-                                                #todoTextField="ngModel" required name="text" />
+                                            <input type="text" placeholder="Enter todo..."
+                                                class="form-control form-control-lg" ngModel #todoTextField="ngModel"
+                                                required name="text" />
                                         </form>
-            
-                                        <button type="submit" class="btn btn-primary">Add Todo</button>
+                                        <button type="submit" (click)="onFormSubmit(form)"
+                                            class="btn btn-primary">Add</button>
 
                                     </div>
-                                    
+
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <div *ngFor="let todo of todos$ | async" class="todo" [ngClass]="{ 'done': todo.completed }">
-                        <div class="row">
-                            <div class="col-10" (click)="toggleDone(todo.id)">
-                                {{ todo.content }}
-                            </div>
-                            <div class="col-2">
-                                <button type="button" class="btn btn-primary btn-sm" 
-                                (click)="deleteTodo(todo.id)">Remove</button>
+                        <div class="container overflow-hidden py-2 px-5 bg-light">
+                            <div class="row g-5">
+                                <div class="col-11" (click)="toggleDone(todo.id)">
+                                    <h5>
+                                        {{ todo.content }}
+                                    </h5>
+                                </div>
+                                <div class="col-1">
+                                    <button type="button" class="btn btn-primary"
+                                        (click)="deleteTodo(todo.id)">X</button>
+                                </div>
                             </div>
                         </div>
                     </div>
