--- a/frontend/src/app/components/todos/todos.component.html
+++ b/frontend/src/app/components/todos/todos.component.html
@@ -16,7 +16,7 @@
                                             <input type="text" placeholder="Enter todo..." class="form-control form-control-lg" ngModel
                                                 #todoTextField="ngModel" required name="text" />
                                         </form>
-                                        <button type="submit" (click)="onFormSubmit(form)" class="btn btn-primary">Add</button>
+                                        <button type="submit" (click)="onFormSubmit(form)" class="btn btn-primary btn-lg">Add</button>
 
                                     </div>
                                     
