--- a/frontend/src/app/components/todos/todos.component.html
+++ b/frontend/src/app/components/todos/todos.component.html
@@ -19,7 +19,6 @@
                                         <button type="submit" (click)="onFormSubmit(form)" class="btn btn-primary btn-lg">Add</button>
 
                                     </div>
-                                    
                                 </div>
                             </div>
                         </div>
@@ -28,17 +27,17 @@
                     <div *ngFor="let todo of todos$ | async" class="todo" [ngClass]="{ 'done': todo.completed }">
                         <div class="container overflow-hidden py-2 px-5 bg-light">
                             <div class="row g-5">
-                              <div class="col-11" (click)="toggleDone(todo)">
+                              <div class="col-11 px-5" (click)="toggleDone(todo)">
                                    <h5>
                                        {{ todo.content }}
                                    </h5>
-                              </div>
-                              <div class="col-1">
+                                </div>
+                              <div class="col-1 px-1">
                                     <button type="button" class="btn btn-primary"
                                      (click)="deleteTodo(todo.id)">X</button>
-                              </div>
+                                </div>
                             </div>
-                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
